--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,6 +1,7 @@
 html,
 body {
-    background-color: white;
+    /* background-color: white; */
+    background-image: url("../assets/images/lightWood.jpg");
     font-size: 100%;
     font-family: 'Lato', sans-serif;
     line-height: 2;
