--- a/css/scorestyles.css
+++ b/css/scorestyles.css
@@ -1,6 +1,6 @@
 body {
     /* background-color: #f0f0f2; */
-    background-image: url("score.jpeg");
+    background-image: url("../assets/images/score.jpeg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
