Adding media queries

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -109,3 +109,15 @@ footer {
   margin-bottom: 0;
   text-align: center;
 }
+
+@media only screen and (max-width: 768px) {
+    .name {
+        display: none;
+    }
+    .aboutMe {
+        margin-top: -5rem;
+        line-height: 1.75;
+        font-size: 100%;
+    }
+
+}
